# ClipLab

./: .gitignore  README.md  README_EN.md  index.html  package-lock.json  package.json  tsconfig.electron.json  tsconfig.json  vite.config.js
backend/: pyproject.toml
backend/cliplab_backend/: __main__.py  config.py  main.py  schemas.py
backend/cliplab_backend/inpaint/: __init__.py  lama.py  propaint.py  sttn.py
backend/cliplab_backend/services/: __init__.py  douyin.py  download_utils.py  events.py  kuaishou.py  model_manager.py  resolver.py  server_info.py  task_manager.py  watermark.py
backend/cliplab_backend/storage/: __init__.py  db.py
backend/tests/: test_app.py  test_download_utils.py  test_sttn_runtime.py  test_task_manager.py  test_watermark_audio.py  test_watermark_pipeline.py
electron/: main.ts  preload.cts
public/assets/icons/: README.md
scripts/: build-backend-binary.mjs  dev-clean.mjs  package-desktop.mjs  prepare-app-icons.mjs
src/renderer/: App.tsx  styles.css
src/renderer/components/: LogPanel.tsx  Sidebar.tsx  TaskList.tsx
src/renderer/hooks/: useTaskEvents.ts
src/shared/: types.ts
