[project]
name = "cliplab-backend"
version = "0.1.0"
description = "FastAPI sidecar for ClipLab desktop MVP."
requires-python = ">=3.12"
dependencies = [
  "aiofiles>=24.1.0",
  "fastapi>=0.115.12",
  "httpx>=0.28.1",
  "lxml>=5.3.0",
  "numpy>=2.2.6",
  "opencv-python-headless>=4.11.0.86",
  "pyyaml>=6.0.2",
  "pydantic-settings>=2.9.1",
  "uvicorn[standard]>=0.34.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5"
]
sttn = [
  "torch>=2.7.0,<2.8.0",
  "torchvision>=0.22.0,<0.23.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cliplab_backend"]
